changed tooltip direction and stopped clipping for responsivity purposes

--- a/dr-peppa-list/src/components/LevelCard.css
+++ b/dr-peppa-list/src/components/LevelCard.css
@@ -1,7 +1,7 @@
 .card {
     width: 100%;
     display: flex;
-    justify-content: center;
+    margin-left: 10%;
 }
 
 .card a {
