--- a/dr-peppa-list/src/components/Victors.css
+++ b/dr-peppa-list/src/components/Victors.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: 100%;
 }
 
 .victors {
@@ -12,6 +13,7 @@
     flex-direction: column;
     scrollbar-width: none;
     width: 100%;
+    height: 100%;
 }
 
 .victorCard {
@@ -52,8 +54,11 @@
     align-items: center;
 
     position: absolute;
-    left: 105%;
+    /* left: 105%; */
+    top: 105%;
     width: max-content;
+
+    z-index: 1;
 
     background-color: #555;
     padding: 5px 10px;
@@ -78,8 +83,11 @@
     transform: rotate(45deg) translateY(-50%);
     background-color: #555;
     position: absolute;
-    top: 50%;
-    left: -5%;
+    /* top: 50%;
+    left: -5%; */
+    right: 50%;
+    top: -5%;
+    z-index: 1;
 
     border-color: transparent #555 transparent transparent;
     border-width: 5px;
