--- a/dr-peppa-list/src/components/pages/List.css
+++ b/dr-peppa-list/src/components/pages/List.css
@@ -1,6 +1,6 @@
 .page {
     display: grid;
-    grid-template-columns: 2fr 8fr 2fr;
+    grid-template-columns: 2fr 7fr 2fr;
     gap: 0px 20px;
 }
 
@@ -19,9 +19,11 @@
     align-items: center;
     flex-direction: column;
     margin: 10px;
+    overflow-y: scroll;
+    scrollbar-width: none;
 }
 
-.recordsContainer {
+.victorsContainer {
     margin-top: 10px;
     box-sizing: border-box;
 }
